// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddToPlaylistForm > when form is valid > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove">
          <phminuscircle aria-hidden="true" class="icon" size="24" weight="regular"></phminuscircle><span class="clamp text visuallyHidden">Remove</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-1" class="mBS nuxtLink">playlist-1</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-2" class="mBS nuxtLink">playlist-2</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-3" class="mBS nuxtLink">playlist-3</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-4" class="mBS nuxtLink">playlist-4</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is an empty array > matches the snapshot 1`] = `
"<!--v-if-->
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is not an empty array > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-1" class="mBS nuxtLink">playlist-1</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-2" class="mBS nuxtLink">playlist-2</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-3" class="mBS nuxtLink">playlist-3</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-4" class="mBS nuxtLink">playlist-4</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is not an empty array > when newlyCreatedPlaylistId prop is the same as the playlist id > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove">
          <phminuscircle aria-hidden="true" class="icon" size="24" weight="regular"></phminuscircle><span class="clamp text visuallyHidden">Remove</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-1" class="mBS nuxtLink">playlist-1</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-2" class="mBS nuxtLink">playlist-2</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-3" class="mBS nuxtLink">playlist-3</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-4" class="mBS nuxtLink">playlist-4</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is not an empty array > when playlist id is not random > when the ButtonLink component is clicked > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Remove">
          <phminuscircle aria-hidden="true" class="icon" size="24" weight="regular"></phminuscircle><span class="clamp text visuallyHidden">Remove</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-1" class="mBS nuxtLink">playlist-1</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-2" class="mBS nuxtLink">playlist-2</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-3" class="mBS nuxtLink">playlist-3</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-4" class="mBS nuxtLink">playlist-4</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is not an empty array > when playlist id is not random > when the ButtonLink component is clicked > when the ButtonLink component is clicked again > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-1" class="mBS nuxtLink">playlist-1</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-2" class="mBS nuxtLink">playlist-2</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-3" class="mBS nuxtLink">playlist-3</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-4" class="mBS nuxtLink">playlist-4</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is not an empty array > when playlist id is random > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions">
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;

exports[`AddToPlaylistForm > when playlists prop is not an empty array > when router params has an id that matches the playlist id > matches the snapshot 1`] = `
"<div class="mBL playlists">
  <div class="trackTable">
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-0" class="mBS nuxtLink">playlist-0</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-1" class="mBS nuxtLink">playlist-1</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-2" class="mBS nuxtLink">playlist-2</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-3" class="mBS nuxtLink">playlist-3</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
    <div class="trackRow trackBorder" data-test-id="playlist">
      <div class="trackCell"><a aria-label="Go to playlist playlist-4" class="mBS nuxtLink">playlist-4</a>
        <div>
          <phplaylist></phplaylist> 1
        </div>
      </div>
      <div class="trackCell trackOptions"><button class="centerItems buttonLink" type="button" title="Add">
          <phpluscircle aria-hidden="true" class="icon" size="24" weight="regular"></phpluscircle><span class="clamp text visuallyHidden">Add</span>
        </button></div>
    </div>
  </div>
</div>
<form novalidate="">
  <div class="spaceBetween">
    <div class="column inputField formField"><label class="mBXS sentenceCase smallFont label visuallyHidden" for="name">name
        <!--v-if-->
      </label><input id="name" autocomplete="off" class="input" placeholder="Add Playlist" type="text">
      <!--v-if-->
    </div><button class="centerItems buttonLink submitButton submitButton" type="submit">
      <!--v-if--><span class="clamp text">Add</span>
    </button>
  </div>
</form>"
`;
